k8s/cert-manager/coit-frontend-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coit-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - basil.com.35.246.233.194.sslip.io
    secretName:  basil.com.35.246.233.194.sslip.io
  rules:
  - host: basil.com.35.246.233.194.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coit-frontend-lb
            port:
              number: 80
